--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-vertical-timeline-component": "^3.5.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
